# BabyJounce

./: .env.example  .gitignore  ARCHIVE.md  BabyJouncer.ipynb  Makefile  README.md  pyproject.toml
scripts/: run_analysis.py
src/babyjounce/: __init__.py  __main__.py  analysis.py  plots.py
tests/: test_analysis.py  test_plots.py
