[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "babyjounce"
version = "0.1.0"
description = "Reproducible motion-summary analysis for BabyJounce datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
babyjounce = "babyjounce.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
